# bank-teissl_A_BankProject

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Doxyfile  Doxyfile.bak  Makefile  Meetings.md  README.md  cmake_install.cmake  cmock_config.yml  config.yml  coverage.account_data.c.376be57835c7ef214c67b78c259c2ed5.html  coverage.controller.c.b9631ce1097dde380923d84d1441ec38.html  coverage.create_account.c.040d4c0859a38e55c850fd565686395b.html  coverage.delete_account.c.cc2a9bab0dbaa24dcde3ffbc5b3fc883.html  coverage.functions.html  coverage.html  coverage.main.c.4e06ccdfffb226ae2b78be2d4ee5ac01.html  coverage.update_account.c.c7feb97d4b9894f474e166cf0dc1e94f.html  coverage.user_interface.c.f7ae7c540f0a14e74e191093b7943b21.html  file_structure.txt  generate_mocks.bat  main.c  report.txt  run_tests.ps1  test_account_number.c  test_accounts_data.csv  test_accounts_output.csv
.github/: main.c
CMock-master/scripts/: create_mock.rb
CMock-master/src/: cmock.c
Testing/Temporary/: CTestCostData.txt
Tests/: test_account_data.c  test_account_data_mocked.c  test_account_number.c  test_account_number_cmock.c  test_create-number.c  test_create_account.c  test_delete_account.c  test_report_logic.c  test_simple.c  test_transactions_db.c  test_update_account.c  test_validations.c  validations.c
Tests/mocks/: Mockcreate_account.c  Mockcreate_account.h  Mockuser_interface.h
Tests/unity/: CMakeLists.txt
assets/: accounts.csv  deleted_accounts.csv  transactions.csv
coverage/: coverage.account_data.c.474bda277956bf77b30589e24fc72f8d.html  coverage.bank_logic.c.a52ab42bb60de996601e67d274983ef1.html  coverage.controller.c.395b971b93b34895e98bf61512869d3e.html  coverage.create_account.c.2d1394f5600e2ba1ddf548b005bd2dcd.html  coverage.delete_account.c.3a9de1c93ccae31c54ecc6da5758d2fb.html  coverage.functions.html  coverage.html  coverage.main.c.803c5170888b8642f2a97e5e9423d399.html  coverage.report_data.c.8bbbb61639e5c89109be5afa0d72cb75.html  coverage.report_logic.c.af93ae9f925e84d76fb9eb8f24dc7dcb.html  coverage.report_ui.c.f1c67586a6fd8f00dbb362cbd6ef9ecd.html  coverage.transactions_db.c.e4498e26d432c0939c870c6d646e2705.html  coverage.update_account.c.aef9949d4e70d032129cc5bb750caad6.html  coverage.user_interface.c.fca52aa6f953c24b95d6a9023193d555.html  coverage.validations.c.976d9e6a97f46fea343ab155142d7f41.html
docs/html/: account__number_8c.html  account__number_8c.js  account__number_8h.html  account__number_8h.js  account__number_8h_source.html  create__account_8c.html  create__account_8c.js  create__account_8h.html  create__account_8h.js  create__account_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_b0856f6b0d80ccb263b2f415c91f9e17.html  dir_b0856f6b0d80ccb263b2f415c91f9e17.js  doxygen_crawl.html  files.html  globals.html  globals_defs.html  globals_func.html  main_8c.html  navtreedata.js  navtreeindex0.js
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  defines_0.js  defines_1.js  files_1.js  functions_0.js  searchdata.js
docs/latex/: account__number_8h_source.tex  create__account_8h_source.tex  files.tex  refman.tex
mocks/: Mockaccount_data.c  Mockaccount_data.h  Mockconfig.c  Mockconfig.yml  Mockcreate_account.c  Mockcreate_account.h  Mockuser_interface.c  Mockuser_interface.h
src/: account_data.c  account_number.c  create_account.c  create_account_logic.c  main.c  presentation.c  user_interface.c
src/data/: account_data.c  account_data.h  report_data.c  report_data.h  transactions_db.c  transactions_db.h
src/include/: account_data.h  account_number.h  create_account.h  create_account_logic.h  presentation.h  user_interface.h
src/logic/: bank_logic.c  bank_logic.h  controller.c  controller.h  create_account.c  create_account.h  delete_account.c  delete_account.h  program_logic.c  report_logic.c  report_logic.h  update_account.c  update_account.h  validations.c  validations.h
src/logic/withdrawal/: withdrawal.c  withdrawal.h
src/presentation/: report_ui.c  report_ui.h  user_interface.c  user_interface.h
